added barsoom post

--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,7 @@ code, .code { font-family: Consolas, monaco, monospace; }
 .bg-washed-green { background-color: #e8fdf5; }
 .bg-washed-yellow { background-color: #fffceb; }
 .bg-washed-red { background-color: #ffdfdf; }
+.bg-barsoom { background-color: #0E212C; }
 /*
 
    SKINS:PSEUDO
