added proposal and contact page and cost calculator

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-/*! TACHYONS v4.4.3 | http://tachyons.io */
+a {
+  color: #85AF4B
+  }
+
+.bg-cucumber {
+  background-color: #85AF4B;
+}
+  /*! TACHYONS v4.4.3 | http://tachyons.io */
+
 /*
  *
  *      ________            ______
